# ESP32_ESPRESSIF

./: README.md
ADCandPWM/: CMakeLists.txt
BME280_test/: platformio.ini
BinarySemaphore/: CMakeLists.txt  platformio.ini
Encrypt_Decrypt/: README.md  sdkconfig.esp32doit-devkit-v1
EventGroupsBits/: CMakeLists.txt
GpioLedButton/: CMakeLists.txt  sdkconfig.esp32doit-devkit-v1  sdkconfig.esp32doit-devkit-v1.old
HMAC_SHA_256/: CMakeLists.txt
HelloWorld/: CMakeLists.txt  sdkconfig.esp32doit-devkit-v1  sdkconfig.esp32doit-devkit-v1.old
Https_Server/: CMakeLists.txt  platformio.ini  sdkconfig.esp32doit-devkit-v1
LVGL_TFT/: .gitignore  CMakeLists.txt
MQTT_TLS/: CMakeLists.txt  README.md
MutexSemaphores/: CMakeLists.txt
NeoPixels/: CMakeLists.txt  platformio.ini  sdkconfig.esp32doit-devkit-v1  sdkconfig.esp32doit-devkit-v1.old
QueueTest/: CMakeLists.txt
RFIDTest/: CMakeLists.txt
RSA/: .gitignore  CMakeLists.txt  README.md  partitionsJD.csv
RtosTaskWithTimer/: CMakeLists.txt
Sign_Verify_RSA/: CMakeLists.txt
Sign_Verify_RSA/main/: CMakeLists.txt  main.cpp
Sign_Verify_RSA/main/certs/: public.pub
UartTest/: CMakeLists.txt
WifiScan/: platformio.ini
WifiTest/: CMakeLists.txt  sdkconfig.esp32doit-devkit-v1  sdkconfig.esp32doit-devkit-v1.old
esp_timer/: CMakeLists.txt
i2cLCD/: sdkconfig.esp32doit-devkit-v1
i2cScan/: CMakeLists.txt
oledTest/: sdkconfig.esp32doit-devkit-v1
serverTest/: sdkconfig.esp32doit-devkit-v1  sdkconfig.esp32doit-devkit-v1.old
timer_manager/: CMakeLists.txt
watchdogs_Timer/: CMakeLists.txt  README.md
(+164 files in other folders)
